--- a/buildspec.yml
+++ b/buildspec.yml
@@ -34,9 +34,9 @@ phases:
 
     commands:
 
-      #- aws s3 cp --recursive ./build s3://kingdom-software-website/
+      - aws s3 cp --recursive ./build s3://kingdom-software-website/
 
-      #- aws s3 cp --cache-control="max-age=0, no-cache, no-store, must-revalidate" ./build/index.html s3://kingdom-software-website/
+      - aws s3 cp --cache-control="max-age=0, no-cache, no-store, must-revalidate" ./build/index.html s3://kingdom-software-website/
 
       - aws cloudfront create-invalidation --distribution-id E37AHOSX2PPIZZ --paths /index.html
 
