--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^11.11.8",
     "hamburger-react": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-gtm-module": "^2.0.11",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.5.1",
+    "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,6 +44,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-gtm-module": "^2.0.3"
+    "@types/react-gtm-module": "^2.0.3",
+    "@types/react-modal": "^3.16.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
